--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
+title: TNC N. America Science
+email: dmajka@tnc.org
 url: https://thenatureconservancy.github.io
-description: " and in your feed.xml site description."
+description: "Web dev and cartography portfolio"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
